# python-project-template

./: .buildinfo  .readthedocs.yaml  PROJECT_NAME.html  README.md  dev_requirements.txt  genindex.html  index.html  init.sh  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: compile-docs.yaml  docstrings.yaml  publish-to-pypi.yaml
docs/: docs_requirements.txt
docs/source/: PROJECT_NAME.rst  conf.py  index.rst
src/PROJECT_NAME/: __init__.py
