[metadata]
name = PROJECT_NAME
description = PROJECT_DESCRIPTION
author = AUTHOR_NAMES
version = attr:PROJECT_NAME.__version__
license = GPLv3
license_file = COPYING
url = https://github.com/GITHUB_NAME/PROJECT_NAME
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Operating System :: OS Independent
    License :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    PROJECT_NAME
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    mypy>=0.9
    pycodestyle>=2.8
    pydocstyle>=6.1
    pytest>=6.2
    toml>=0.10

[options.package_data]
prob-dists = py.typed

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 120
